--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <img src="{{ asset('images/starshop-logo.png') }}" alt="Starshop Logo">
+    {% block body %}{% endblock %}
     </body>
 </html>
